--- a/NursingDocumentTracker/MainStoryboard.storyboard
+++ b/NursingDocumentTracker/MainStoryboard.storyboard
@@ -21,12 +21,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Od-g4-IMD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="538" y="-279"/>
+            <point key="canvasLocation" x="530" y="-1284"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Z1E-Ux-uaB">
             <objects>
-                <tabBarController definesPresentationContext="YES" id="qPM-KT-9J0" sceneMemberID="viewController">
+                <tabBarController definesPresentationContext="YES" id="qPM-KT-9J0" customClass="XIWTabBarController" sceneMemberID="viewController">
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="Ual-Ka-noJ">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
@@ -34,15 +34,18 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
+                        <segue destination="7T0-Gh-3fk" kind="relationship" relationship="viewControllers" id="tDb-qc-w0u"/>
                         <segue destination="Klj-wf-T1A" kind="relationship" relationship="viewControllers" id="TBX-pI-5mf"/>
                         <segue destination="e1o-f1-VpA" kind="relationship" relationship="viewControllers" id="gg6-U5-MSN"/>
+                        <segue destination="QIU-db-sAO" kind="relationship" relationship="viewControllers" id="Rq9-HI-Tfl"/>
+                        <segue destination="yuO-uV-5Rq" kind="relationship" relationship="viewControllers" id="3RU-Cf-3vf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RLP-H3-fff" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4" y="48"/>
         </scene>
-        <!--View Controller - Item 2-->
+        <!--View Controller - Renewals-->
         <scene sceneID="Gcr-GO-5o0">
             <objects>
                 <viewController id="e1o-f1-VpA" sceneMemberID="viewController">
@@ -55,11 +58,68 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="VGa-VC-fFx"/>
+                    <tabBarItem key="tabBarItem" title="Renewals" id="VGa-VC-fFx"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JEF-vL-NKm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="538" y="374"/>
+            <point key="canvasLocation" x="530" y="-556"/>
+        </scene>
+        <!--View Controller - Export-->
+        <scene sceneID="KdT-nJ-6tR">
+            <objects>
+                <viewController id="QIU-db-sAO" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="a4Z-mx-Vy2"/>
+                        <viewControllerLayoutGuide type="bottom" id="2bE-9g-A1E"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sBd-3h-8GB">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Export" id="z8x-Eb-1vd"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gcQ-q7-9eL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="530" y="157"/>
+        </scene>
+        <!--View Controller - Settings-->
+        <scene sceneID="XNF-bW-6Qi">
+            <objects>
+                <viewController id="yuO-uV-5Rq" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fDC-JQ-EkZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="4FU-I2-BpN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yel-MY-gDd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Settings" id="fOi-vC-kEX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TYY-aA-9pn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="530" y="856"/>
+        </scene>
+        <!--View Controller - Upload-->
+        <scene sceneID="njp-Cq-vzl">
+            <objects>
+                <viewController id="7T0-Gh-3fk" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NZA-FP-OY4"/>
+                        <viewControllerLayoutGuide type="bottom" id="51h-Q7-wRR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ba1-7K-Rs0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Upload" id="YSK-aN-ETc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xMu-e7-97H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="530" y="-1978"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
