Refactoring to change class prefix, organize classes into groups in XCode, and consolidate User model

--- a/NursingDocumentTracker/MainStoryboard.storyboard
+++ b/NursingDocumentTracker/MainStoryboard.storyboard
@@ -7,7 +7,7 @@
         <!--Home View Controller - Home-->
         <scene sceneID="fss-Hz-LXO">
             <objects>
-                <viewController id="Klj-wf-T1A" customClass="XIWHomeViewController" sceneMemberID="viewController">
+                <viewController id="Klj-wf-T1A" customClass="NDTHomeViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Tvk-kW-YPf"/>
                         <viewControllerLayoutGuide type="bottom" id="UxC-zh-5Ve"/>
@@ -38,7 +38,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="Z1E-Ux-uaB">
             <objects>
-                <tabBarController definesPresentationContext="YES" id="qPM-KT-9J0" customClass="XIWTabBarController" sceneMemberID="viewController">
+                <tabBarController definesPresentationContext="YES" id="qPM-KT-9J0" customClass="NDTTabBarController" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="Lvy-nD-iSN"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="Ual-Ka-noJ">
@@ -61,7 +61,7 @@
         <!--First View Controller-->
         <scene sceneID="eDc-Nn-d99">
             <objects>
-                <viewController id="y7X-wo-rYG" customClass="XIWFirstViewController" sceneMemberID="viewController">
+                <viewController id="y7X-wo-rYG" customClass="NDTFirstViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iac-Qi-Q25"/>
                         <viewControllerLayoutGuide type="bottom" id="k4B-fa-pif"/>
@@ -128,7 +128,7 @@
         <!--Register View Controller-->
         <scene sceneID="Pj0-GL-vIK">
             <objects>
-                <viewController id="Rpq-fT-ajK" customClass="XIWRegisterViewController" sceneMemberID="viewController">
+                <viewController id="Rpq-fT-ajK" customClass="NDTRegisterViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="IAm-fO-Tfx"/>
                         <viewControllerLayoutGuide type="bottom" id="bfR-B7-aH6"/>
