--- a/NursingDocumentTracker/MainStoryboard.storyboard
+++ b/NursingDocumentTracker/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="y7X-wo-rYG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4504" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="y7X-wo-rYG">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3734.1"/>
     </dependencies>
     <scenes>
         <!--Home View Controller - Home-->
@@ -58,10 +58,10 @@
             </objects>
             <point key="canvasLocation" x="1668" y="1392"/>
         </scene>
-        <!--First View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="eDc-Nn-d99">
             <objects>
-                <viewController id="y7X-wo-rYG" customClass="NDTFirstViewController" sceneMemberID="viewController">
+                <viewController id="y7X-wo-rYG" customClass="NDTLoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iac-Qi-Q25"/>
                         <viewControllerLayoutGuide type="bottom" id="k4B-fa-pif"/>
