--- a/NursingDocumentTracker/MainStoryboard.storyboard
+++ b/NursingDocumentTracker/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4504" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="y7X-wo-rYG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="y7X-wo-rYG">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3734.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
         <!--Home View Controller - Home-->
@@ -33,7 +33,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Od-g4-IMD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2418" y="556"/>
+            <point key="canvasLocation" x="961" y="-104"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Z1E-Ux-uaB">
@@ -47,7 +47,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="7T0-Gh-3fk" kind="relationship" relationship="viewControllers" id="tDb-qc-w0u"/>
+                        <segue destination="C0A-8H-mxL" kind="relationship" relationship="viewControllers" id="eCc-fr-KGu"/>
                         <segue destination="Klj-wf-T1A" kind="relationship" relationship="viewControllers" id="TBX-pI-5mf"/>
                         <segue destination="e1o-f1-VpA" kind="relationship" relationship="viewControllers" id="gg6-U5-MSN"/>
                         <segue destination="QIU-db-sAO" kind="relationship" relationship="viewControllers" id="Rq9-HI-Tfl"/>
@@ -56,7 +56,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RLP-H3-fff" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1668" y="1392"/>
+            <point key="canvasLocation" x="211" y="732"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="eDc-Nn-d99">
@@ -123,7 +123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s82-X7-9Dm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="761" y="1408"/>
+            <point key="canvasLocation" x="-696" y="748"/>
         </scene>
         <!--Register View Controller-->
         <scene sceneID="Pj0-GL-vIK">
@@ -202,7 +202,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dk7-CE-MC5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1312" y="704"/>
+            <point key="canvasLocation" x="-145" y="44"/>
         </scene>
         <!--View Controller - Renewals-->
         <scene sceneID="Gcr-GO-5o0">
@@ -221,7 +221,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JEF-vL-NKm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2418" y="1284"/>
+            <point key="canvasLocation" x="961" y="624"/>
         </scene>
         <!--View Controller - Export-->
         <scene sceneID="KdT-nJ-6tR">
@@ -240,7 +240,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gcQ-q7-9eL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2418" y="1997"/>
+            <point key="canvasLocation" x="961" y="1337"/>
         </scene>
         <!--View Controller - Settings-->
         <scene sceneID="XNF-bW-6Qi">
@@ -259,26 +259,117 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TYY-aA-9pn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2418" y="2696"/>
+            <point key="canvasLocation" x="961" y="2036"/>
         </scene>
-        <!--View Controller - Upload-->
-        <scene sceneID="njp-Cq-vzl">
+        <!--Navigation Controller - Upload-->
+        <scene sceneID="3qv-1a-6Zf">
             <objects>
-                <viewController id="7T0-Gh-3fk" sceneMemberID="viewController">
+                <navigationController definesPresentationContext="YES" id="C0A-8H-mxL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Upload" id="3oo-kO-tPy"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ax1-A5-LIp">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="yCM-hc-XaA" kind="relationship" relationship="rootViewController" id="RWT-LS-xRE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oFv-b6-F54" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="961" y="-796"/>
+        </scene>
+        <!--Upload View Controller - Upload-->
+        <scene sceneID="j9g-8s-tbq">
+            <objects>
+                <viewController id="yCM-hc-XaA" customClass="NDTUploadViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="NZA-FP-OY4"/>
-                        <viewControllerLayoutGuide type="bottom" id="51h-Q7-wRR"/>
+                        <viewControllerLayoutGuide type="top" id="UoW-Ho-RHL"/>
+                        <viewControllerLayoutGuide type="bottom" id="FyU-o5-eRK"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ba1-7K-Rs0">
+                    <view key="view" contentMode="scaleToFill" id="reW-ZP-zM9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J7a-OY-BKH">
+                                <rect key="frame" x="0.0" y="64" width="320" height="456"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Upload" id="BHj-0D-ISO">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="gjy-CQ-hku">
+                            <connections>
+                                <segue destination="zUd-yr-HdW" kind="push" id="qAw-GI-Vim"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="J7a-OY-BKH" id="DP7-bF-enC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ABN-5z-2rC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1387" y="-796"/>
+        </scene>
+        <!--Category View Controller - Category-->
+        <scene sceneID="5pk-03-Wwz">
+            <objects>
+                <viewController id="zUd-yr-HdW" customClass="NDTCategoryViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HyE-nn-gep"/>
+                        <viewControllerLayoutGuide type="bottom" id="Qbr-wc-O17"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bb9-NY-lxT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select Category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATW-ca-HYI">
+                                <rect key="frame" x="99" y="119" width="123" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V3z-mV-Jqi">
+                                <rect key="frame" x="0.0" y="193" width="320" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Category" id="P8E-0q-xvw">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="Yrt-us-bbL">
+                            <connections>
+                                <segue destination="yuu-15-jHZ" kind="push" id="qGJ-GX-wFe"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="picker" destination="V3z-mV-Jqi" id="tF1-le-5DQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E7w-7I-NFl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1801" y="-796"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="VDs-dd-iXu">
+            <objects>
+                <viewController id="yuu-15-jHZ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HRx-RL-nsR"/>
+                        <viewControllerLayoutGuide type="bottom" id="La7-3K-6oR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="q0w-1w-TPH">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Upload" id="YSK-aN-ETc"/>
+                    <navigationItem key="navigationItem" id="JDg-nG-aAd"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xMu-e7-97H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Idg-dr-fyE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2418" y="-138"/>
+            <point key="canvasLocation" x="2219" y="-796"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
