--- a/NursingDocumentTracker/MainStoryboard.storyboard
+++ b/NursingDocumentTracker/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="y7X-wo-rYG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="qPM-KT-9J0">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -23,7 +23,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="logout:" destination="Klj-wf-T1A" eventType="touchUpInside" id="hYU-Hr-LVC"/>
+                                    <action selector="logoutButtonTapAction:" destination="Klj-wf-T1A" eventType="touchUpInside" id="gnC-re-ShG"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -35,10 +35,10 @@
             </objects>
             <point key="canvasLocation" x="961" y="-104"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Main View Controller-->
         <scene sceneID="Z1E-Ux-uaB">
             <objects>
-                <tabBarController definesPresentationContext="YES" id="qPM-KT-9J0" customClass="NDTTabBarController" sceneMemberID="viewController">
+                <tabBarController definesPresentationContext="YES" id="qPM-KT-9J0" customClass="NDTMainViewController" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="Lvy-nD-iSN"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="Ual-Ka-noJ">
@@ -56,7 +56,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RLP-H3-fff" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="211" y="732"/>
+            <point key="canvasLocation" x="251" y="648"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="eDc-Nn-d99">
