--- a/NursingDocumentTracker/MainStoryboard.storyboard
+++ b/NursingDocumentTracker/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="qPM-KT-9J0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4504" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="qPM-KT-9J0">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3734.1"/>
     </dependencies>
     <scenes>
         <!--Home View Controller - Home-->
@@ -47,7 +47,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="C0A-8H-mxL" kind="relationship" relationship="viewControllers" id="eCc-fr-KGu"/>
+                        <segue destination="C0A-8H-mxL" kind="relationship" relationship="viewControllers" id="xlm-o8-Nt6"/>
                         <segue destination="Klj-wf-T1A" kind="relationship" relationship="viewControllers" id="TBX-pI-5mf"/>
                         <segue destination="e1o-f1-VpA" kind="relationship" relationship="viewControllers" id="gg6-U5-MSN"/>
                         <segue destination="QIU-db-sAO" kind="relationship" relationship="viewControllers" id="Rq9-HI-Tfl"/>
@@ -261,10 +261,10 @@
             </objects>
             <point key="canvasLocation" x="961" y="2036"/>
         </scene>
-        <!--Navigation Controller - Upload-->
+        <!--Upload Controller - Upload-->
         <scene sceneID="3qv-1a-6Zf">
             <objects>
-                <navigationController definesPresentationContext="YES" id="C0A-8H-mxL" sceneMemberID="viewController">
+                <navigationController definesPresentationContext="YES" id="C0A-8H-mxL" customClass="NDTUploadController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Upload" id="3oo-kO-tPy"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ax1-A5-LIp">
                         <autoresizingMask key="autoresizingMask"/>
@@ -275,12 +275,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oFv-b6-F54" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="961" y="-796"/>
+            <point key="canvasLocation" x="961" y="-788"/>
         </scene>
-        <!--Upload View Controller - Upload-->
+        <!--Take Image View Controller - Upload-->
         <scene sceneID="j9g-8s-tbq">
             <objects>
-                <viewController id="yCM-hc-XaA" customClass="NDTUploadViewController" sceneMemberID="viewController">
+                <viewController id="yCM-hc-XaA" customClass="NDTTakeImageViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="UoW-Ho-RHL"/>
                         <viewControllerLayoutGuide type="bottom" id="FyU-o5-eRK"/>
@@ -296,6 +296,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="d6o-iw-hgS"/>
                     <navigationItem key="navigationItem" title="Upload" id="BHj-0D-ISO">
                         <barButtonItem key="rightBarButtonItem" title="Next" id="gjy-CQ-hku">
                             <connections>
@@ -305,11 +306,12 @@
                     </navigationItem>
                     <connections>
                         <outlet property="imageView" destination="J7a-OY-BKH" id="DP7-bF-enC"/>
+                        <outlet property="nextButton" destination="gjy-CQ-hku" id="bUA-FM-yqR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ABN-5z-2rC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1387" y="-796"/>
+            <point key="canvasLocation" x="1387" y="-788"/>
         </scene>
         <!--Category View Controller - Category-->
         <scene sceneID="5pk-03-Wwz">
@@ -345,12 +347,13 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="nextButton" destination="Yrt-us-bbL" id="IKU-Yi-b9r"/>
                         <outlet property="picker" destination="V3z-mV-Jqi" id="tF1-le-5DQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E7w-7I-NFl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1801" y="-796"/>
+            <point key="canvasLocation" x="1801" y="-788"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="VDs-dd-iXu">
@@ -369,7 +372,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Idg-dr-fyE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2219" y="-796"/>
+            <point key="canvasLocation" x="2219" y="-788"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
