--- a/NursingDocumentTracker/MainStoryboard.storyboard
+++ b/NursingDocumentTracker/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4504" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="qPM-KT-9J0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="qPM-KT-9J0">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3734.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -57,7 +57,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qsa-ax-SwJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1922" y="573"/>
+            <point key="canvasLocation" x="1884" y="573"/>
         </scene>
         <!--Home View Controller - Home-->
         <scene sceneID="fss-Hz-LXO">
@@ -93,7 +93,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Od-g4-IMD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1902" y="-35"/>
+            <point key="canvasLocation" x="1884" y="-121"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="bap-Zg-opM">
@@ -122,7 +122,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3ZZ-8I-Mh4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2529" y="-35"/>
+            <point key="canvasLocation" x="2571" y="-121"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="Z1E-Ux-uaB">
@@ -310,7 +310,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JEF-vL-NKm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1190" y="604"/>
+            <point key="canvasLocation" x="1190" y="664"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="KdT-nJ-6tR">
@@ -520,7 +520,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lQi-h7-caM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2822" y="-839"/>
+            <point key="canvasLocation" x="3034" y="-1595"/>
         </scene>
         <!--UploadCEU View Controller - CEUs-->
         <scene sceneID="9HQ-dT-BZk">
@@ -616,7 +616,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Mr-qh-TbY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2822" y="-163"/>
+            <point key="canvasLocation" x="3394" y="-1267"/>
         </scene>
         <!--Upload Resume View Controller - CV/Resume-->
         <scene sceneID="02z-86-VOd">
@@ -680,7 +680,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xLW-Pl-I1J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2818" y="503"/>
+            <point key="canvasLocation" x="3758" y="-945"/>
         </scene>
         <!--Upload Other View Controller - Other-->
         <scene sceneID="rDG-tY-aux">
@@ -730,7 +730,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="viM-dt-RjQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2824" y="1171"/>
+            <point key="canvasLocation" x="4148" y="-673"/>
         </scene>
         <!--Upload License View Controller - Licenses-->
         <scene sceneID="tV5-VM-aYf">
@@ -794,7 +794,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bIC-BM-dPT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2822" y="-1514"/>
+            <point key="canvasLocation" x="2674" y="-1774"/>
         </scene>
         <!--Upload Immunization View Controller - Immunizations-->
         <scene sceneID="kWx-Mn-uym">
@@ -857,7 +857,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ene-nT-h86" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2818" y="-2196"/>
+            <point key="canvasLocation" x="2270" y="-1820"/>
         </scene>
     </scenes>
     <resources>
